Modify job details for AI Engineer position
Updated job title and duration, and added detailed project descriptions and achievements for the AI Engineer role.

--- a/index.html
+++ b/index.html
@@ -334,10 +334,31 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">Feb 2025 - Present</p>
-                    <h5>AI Software Developer<span>- Reality AI LAB (Part Time)</span></h5>
+                    <p class="tl-duration">Aug 2024 - Present</p>
+                    <h5>AI Engineer <span> Johnson and Johnson</span></h5>
                     <p>
-                        Developing Open Source AI Agents for Educators.
+                        • Worked with 100K Xray and MRI scans training a Computer Vision model for disease analysis achieving 92% accuracy in disease
+diagnosis.
+• Optimized Customer Lifetime Value models (Ridge, SVR, Lasso, XGBoost) Identifying high risk customers, improving customer
+retention by 15% using data driven personalization.
+• Developed Regression models using RNN, SVR, Gradient Boosting, Bayesian Networking find patterns in sales for effective
+marketing outreach based on cost prediction and time series forecasting.
+• Collaborated with risk and compliance teams building predictive models in Python flagging risk transactions,strengthening
+fraud prevention strategies and ensuring regulatory compliance across sales domain improving sales by 12%.
+• Automated MLOps workflows using cloud tools (AWS SageMaker, MLflow, Jenkins, Athena, CloudWatch) following CI/CD best
+practices and reducing model retraining cycle by 7 hrs.
+• Built a data pipeline and performed analytics using AWS stack (EMR, EC2, S3, RDS, Lambda, Kinesis, Athena, ELB, Glue, SQS,
+Redshift, ) processing 10 Million records every day.
+• Implemented secure Fast API with JWT authentication and Data Encryption for HIPPA compliance.
+• Engineered ML models (CNN, NLP, ANN, BERT, OpenAI GPT-4 Vision) supporting chatbot enabling Images/Videos/Text data
+processing, enhancing automation and decision making processes.
+• Applied Explainable AI frameworks to ensure transparency in safety critical ML models meeting ISO standard frameworks
+42001, 27001, 14971.
+• Utilized Unity Catalog in Databricks implementing fine grain Data governance, ensuring efficient access to datasets across
+multiple projects and teams.
+• Trained cross functional teams on AI employment, resulting in 40% increase in team’s productivity and performance.
+• Partnered across engineering, product, and compliance teams in Agile settings to ensure safe and effective AI adoption in
+product development and customer.
                     </p>
                 </div>
                 <div class="timeline-item">
