Revise work experience section in index.html
Updated work experience details, including role changes and project descriptions.

--- a/index.html
+++ b/index.html
@@ -378,11 +378,29 @@ product development and customer.
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">May 2022- Dec 2022</p>
-                    <h5>Software Engineer - Java<span> - Walgreens, Inc.(Through TCS)</span></h5>
+                    <p class="tl-duration">Feb 2020- Dec 2022</p>
+                    <h5>Data Scientist<span> - TCS (Clients: Universal Music Group, TCS)</span></h5>
                     <p>
-                        Developing and Deploying Microservices and API's on AZURE and GCP multicloud.
-                    </p>
+Developed and deployed Machine Learning models and anomaly detection systems for digital streaming services using
+Databricks, and Spark Streaming, achieving a 15% improvement in detecting service disruptions.
+• Developed Regression models, Xgboost, Random forest to find fraudelent transcaions in digital payments.
+• Developed and deployed transformer-based models leveraging Generative AI to detect anomalies in streaming services by
+analyzing sequential data patterns. Detected irregularities in user activity and content delivery sequences, improving the
+accuracy and speed of identifying service disruptions, and enhancing customer engagement by 20%.
+• Executed end-to-end ETL pipelines encompassing data modeling, ad-hoc analysis, and the formulation and implementation of
+algorithms to extract Sales and Revenue metrics within the AWS environment.
+• Created Delta tables in Databricks to enhance data reliability, streamline data processing workflows and utilized Delta Lake
+features for ACID transactions and time travel capabilities.
+• Extracted real-time data feed using Kafka, process core jobs using Hadoop, MapReduce jobs, Hive Queries to process the data
+and store in HDFS and MongoDB databases.
+• Partnered with Rx team integrating Rx app data from Google APIgee to Snowflake, ensuring secure data processing across
+payment gateways and downstream analytics systems.
+• Created Tableau Dashboards using ServiceNow CMDB data to monitor service failures and KPI’s across various domains to
+business stakeholders.
+• Enforced Data Modeling techniques and Data governance policies while developing Reinforcement learning algorithm using
+Realtime streaming data.
+• Validated Geolocation data used for store tracking and delivery to detect issues in misalignment with Zip code delivery
+mappings with 6% stores and reducing them to 1%.                    </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
